@@ -271,7 +271,11 @@ class Gravity_Flow_Entry_Editor {
 		foreach ( $form['fields'] as $key => $field ) {
 			if ( $field->type == 'page' ) {
 				unset( $form['fields'][ $key ] );
+				continue;
 			}
+
+			// Populate the $_display_fields array.
+			$this->is_display_field( $field, true );
 		}
 
 		return $form;
@@ -287,12 +291,31 @@ class Gravity_Flow_Entry_Editor {
 	 * @return bool
 	 */
 	public function can_remove_field( $field ) {
-		$can_remove_field = ! ( $this->is_editable_field( $field ) || $this->is_display_field( $field, true ) )
+		$can_remove_field = ! ( $this->is_editable_field( $field ) || $this->is_display_field( $field ) )
 		                    && $this->_is_dynamic_conditional_logic_enabled
 		                    && empty( $field->conditionalLogic )
-		                    && empty( $field->conditionalLogicFields );
+		                    && ! $this->has_dependent_logic_field( $field );
 
 		return $can_remove_field;
+	}
+
+	/**
+	 * Determines if there are display or editable fields with conditional logic based on the current field.
+	 *
+	 * @param GF_Field $field The current field.
+	 *
+	 * @return bool
+	 */
+	public function has_dependent_logic_field( $field ) {
+		if ( ! empty( $field->conditionalLogicFields ) ) {
+			foreach ( $field->conditionalLogicFields as $logicField ) {
+				if ( in_array( $logicField, $this->_editable_fields ) || in_array( $logicField, $this->_display_fields ) ) {
+					return true;
+				}
+			}
+		}
+
+		return false;
 	}
 
 	/**
@@ -409,7 +432,7 @@ class Gravity_Flow_Entry_Editor {
 			}
 		}
 
-		if ( ! $this->is_display_field( $field, true ) ) {
+		if ( ! $this->is_display_field( $field ) ) {
 
 			return $html;
 		}
